# tamk-ohsyte-2026

./: LICENSE  README.md
01/: .gitignore  hello2.rs
02/events/src/: main.rs
03/: README.md
03/events/src/: main.rs
04/events/: Cargo.toml
04/events/src/: main.rs
04/filetest/: Cargo.toml
04/filetest/src/: main.rs
05/dates/: Cargo.toml
05/dates/src/: main.rs
06/today/src/: birthday.rs  events.rs  lib.rs  main.rs
07/configdirs/: Cargo.toml
07/configdirs/src/: main.rs
07/today/: Cargo.toml  README.md  compsci.csv
07/today/src/: lib.rs
07/today/src/providers/: mod.rs  textfile.rs
08/today/: Cargo.toml  README.md
08/today/src/: events.rs  lib.rs
08/today/src/providers/: csvfile.rs  mod.rs  sqlite.rs  web.rs
09/today/: README.md
09/today/src/: events.rs  lib.rs  main.rs
09/today/src/providers/: csvfile.rs  web.rs
10/today/: Cargo.toml
10/today/src/: filters.rs
10/today/src/providers/: mod.rs  textfile.rs
11/today/src/: events.rs  lib.rs  main.rs
11/today/src/providers/: csvfile.rs  mod.rs  sqlite.rs  textfile.rs  web.rs
12/today/: Cargo.toml
12/today/src/: events.rs  filters.rs  lib.rs  main.rs
12/today/src/providers/: csvfile.rs  mod.rs  sqlite.rs  textfile.rs  web.rs
13/today/: Cargo.toml  README.md
13/today/src/: events.rs  filters.rs  lib.rs  main.rs
13/today/src/providers/: sqlite.rs  textfile.rs  web.rs
