[package]
name = "today"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
csv = "1.4.0"
dirs = "6.0.0"
toml  = "1.0.4"
sqlite = "0.37.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6.0", features = ["derive"] }
